--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 aiosqlite==0.21.0
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
 atlastk==0.13.4
+attrs==25.3.0
 beautifulsoup4==4.13.3
+blinker==1.9.0
+cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -10,42 +14,85 @@ click==8.1.8
 crypto==1.4.1
 cryptography==44.0.2
 fastapi==0.115.11
+filelock==3.18.0
 frozendict==2.4.6
+fsspec==2025.3.0
+gitdb==4.0.12
+GitPython==3.1.44
 h11==0.14.0
 idna==3.10
 iso8601==2.1.0
+Jinja2==3.1.6
 joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+MarkupSafe==3.0.2
+mpmath==1.3.0
 multitasking==0.0.11
 Naked==0.1.32
+narwhals==1.31.0
+networkx==3.4.2
 numpy==2.2.4
-nvidia-nccl-cu12==2.26.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+packaging==24.2
 pandas==2.2.3
 passlib==1.7.4
 peewee==3.17.9
+pillow==11.1.0
 platformdirs==4.3.7
+protobuf==5.29.4
+pyarrow==19.0.1
 pycparser==2.22
 pycryptodome==3.22.0
 pydantic==2.10.6
 pydantic-settings==2.8.1
 pydantic_core==2.27.2
+pydeck==0.9.1
 PyJWT==2.10.1
 pypika-tortoise==0.5.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
 PyYAML==6.0.2
+referencing==0.36.2
 requests==2.32.3
+rpds-py==0.23.1
+scikit-learn==1.6.1
 scipy==1.15.2
+setuptools==78.0.2
 shellescape==3.8.1
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 starlette==0.46.1
+streamlit==1.43.2
+sympy==1.13.1
+tenacity==9.0.0
+threadpoolctl==3.6.0
+toml==0.10.2
+torch==2.6.0
+tornado==6.4.2
 tortoise==0.1.1
 tortoise-orm==0.24.2
+triton==3.2.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 uvicorn==0.34.0
+vaderSentiment==3.3.2
+watchdog==6.0.0
 xgboost==3.0.0
 yfinance==0.2.55
